[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tools"
version = "0.1.0"
description = "A collection of useful scripts for working with LLM"
readme = "README.md"
authors = [
    {name = "Justin Emgarten", email = "justin@emgarten.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
markdown-package = "markdown_package:main"

[tool.setuptools]
packages = [""]